# Gustave

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  conanfile.py  conanfile.txt  mkdocs.yml  versions.json
0.1/: 404.html  index.html  sitemap.xml
0.2/: 404.html  (+2 more)
components/core/testing/: CMakeLists.txt
components/core/testing/include/: SceneUserData.hpp  TestHelpers.hpp
components/core/testing/model/: Stress.cpp
components/core/testing/scenes/: CuboidGridScene.cpp
components/core/testing/scenes/cuboidGridScene/: BlockConstructionInfo.cpp  BlockIndex.cpp  BlockReference.cpp  Blocks.cpp  ContactReference.cpp  Contacts.cpp  Links.cpp  StructureReference.cpp  Structures.cpp  Transaction.cpp
components/core/testing/scenes/cuboidGridScene/blockReference/: Contacts.cpp  Structures.cpp
components/core/testing/scenes/cuboidGridScene/detail/: BlockData.cpp  BlockDataReference.cpp  BlockMappedData.cpp  DataNeighbours.cpp  IndexNeighbours.cpp  InternalLinks.cpp  SceneBlocks.cpp  SceneData.cpp  SceneStructures.cpp  SceneUpdater.cpp
components/core/testing/scenes/cuboidGridScene/structureReference/: Blocks.cpp  Contacts.cpp  Links.cpp
components/core/testing/solvers/: Force1Solver.cpp
components/core/testing/solvers/force1Solver/: Config.cpp  Solution.cpp
components/core/testing/solvers/force1Solver/detail/: ClusterStructure.cpp  DepthDecomposition.cpp  F1Structure.cpp  LayerDecomposition.cpp  LayerStructure.cpp
components/core/testing/solvers/force1Solver/solution/: ContactReference.cpp  Contacts.cpp  NodeReference.cpp  Nodes.cpp
components/core/testing/worlds/: SyncWorld.cpp
components/core/testing/worlds/syncWorld/: BlockReference.cpp  Blocks.cpp  ContactReference.cpp  Contacts.cpp  Links.cpp  StructureReference.cpp  Structures.cpp
components/core/testing/worlds/syncWorld/detail/: WorldData.cpp  WorldUpdater.cpp
components/math3d/: CMakeLists.txt
components/math3d/include/gustave/math3d/: BasicDirection.hpp  NormalizedVector3.hpp  Vector3.hpp  cRealConstArg.hpp
components/math3d/tests/: BasicDirection.cpp  NormalizedVector3.cpp  Vector3.cpp
components/math3d/tests/include/: TestConfig.hpp  TestHelpers.hpp
components/utils/: CMakeLists.txt
components/utils/include/gustave/hash/: HashEquals.hpp  Hasher.hpp  PointerHash.hpp  cHashable.hpp  cHashableMemberOf.hpp  getMember.hpp
components/utils/include/gustave/meta/: Meta.hpp  MutableIf.hpp
components/utils/include/gustave/text/: SizedStringView.hpp
components/utils/include/gustave/utils/: EndIterator.hpp  ForwardIterator.hpp  HashEquals.hpp  Hasher.hpp  IndexGenerator.hpp  IndexRange.hpp  InplaceVector.hpp  NoInit.hpp  NumberHyperscript.hpp  PointerHash.hpp  Prop.hpp  SharedIndexedSet.hpp  SizedString.hpp  SizedStringView.hpp  cChar.hpp  cEnumerator.hpp  cHashable.hpp  cHashableMemberOf.hpp  cIndex.hpp  canNarrow.hpp  getMember.hpp  getter.hpp
components/utils/include/gustave/utils/prop/: Ptr.hpp  SharedPtr.hpp
components/utils/tests/hash/: HashEquals.cpp  Hasher.cpp  PointerHash.cpp
components/utils/tests/include/: Point.hpp
components/utils/tests/text/: NumberHyperscript.cpp  SizedString.cpp  SizedStringView.cpp
components/utils/tests/utils/: ForwardIterator.cpp  HashEquals.cpp  Hasher.cpp  IndexGenerator.cpp  IndexRange.cpp  InplaceVector.cpp  NumberHyperscript.cpp  PointerHash.cpp  SharedIndexedSet.cpp  SizedString.cpp  SizedStringView.cpp  canNarrow.cpp  getter.cpp
components/utils/tests/utils/prop/: Ptr.cpp  SharedPtr.cpp
distribs/std/: CMakeLists.txt
distribs/std/strictUnit/: CMakeLists.txt
distribs/std/strictUnit/tests/include/: TestConfig.hpp
distribs/std/unitless/: CMakeLists.txt
distribs/std/unitless/tests/include/: TestConfig.hpp
distribs/vanilla/: CMakeLists.txt
distribs/vanilla/include/gustave/vanilla/: Gustave.hpp  LibConfig.hpp
distribs/vanilla/tests/force1/: Solution.cpp  Solver.cpp
distribs/vanilla/tests/force1/solution/: ContactReference.cpp  Contacts.cpp  NodeReference.cpp  Nodes.cpp
distribs/vanilla/tests/force1/solutionUtils/: ContactReference.cpp  Contacts.cpp  NodeReference.cpp  Nodes.cpp
distribs/vanilla/tests/include/: TestConfig.hpp  TestHelpers.hpp
distribs/vanilla/tests/model/: Material.cpp  MaxStress.cpp  Stress.cpp
distribs/vanilla/tests/scenes/: CuboidGridScene.cpp
distribs/vanilla/tests/scenes/cuboidGrid/: BlockConstructionInfo.cpp  BlockIndex.cpp  BlockPosition.cpp  BlockReference.cpp  Blocks.cpp  ContactReference.cpp  Contacts.cpp  Links.cpp  Scene.cpp  StructureReference.cpp  Structures.cpp  Transaction.cpp
distribs/vanilla/tests/scenes/cuboidGrid/detail/: BlockDataReference.cpp  BlockMappedData.cpp  BlockReference.cpp  DataNeighbours.cpp  IndexNeighbours.cpp  InternalLinks.cpp  PositionNeighbours.cpp  SceneBlocks.cpp  SceneNeighbours.cpp  SceneUpdater.cpp
distribs/vanilla/tests/scenes/cuboidGridScene/: BlockConstructionInfo.cpp  BlockIndex.cpp  BlockReference.cpp  Blocks.cpp  ContactReference.cpp  Contacts.cpp  Links.cpp  StructureReference.cpp  Structures.cpp  Transaction.cpp
distribs/vanilla/tests/scenes/cuboidGridScene/detail/: BlockDataReference.cpp  BlockMappedData.cpp  DataNeighbours.cpp  IndexNeighbours.cpp  InternalLinks.cpp  SceneBlocks.cpp  SceneUpdater.cpp
distribs/vanilla/tests/solvers/: Force1Solver.cpp
distribs/vanilla/tests/solvers/force1Solver/: Config.cpp  Solution.cpp
distribs/vanilla/tests/solvers/force1Solver/solution/: ContactReference.cpp  Contacts.cpp  NodeReference.cpp  Nodes.cpp
distribs/vanilla/tests/world/: SyncWorld.cpp
distribs/vanilla/tests/worlds/: SyncWorld.cpp
distribs/vanilla/tests/worlds/sync/: BlockReference.cpp  Blocks.cpp  ContactReference.cpp  Contacts.cpp  Links.cpp  StructureReference.cpp  Structures.cpp
distribs/vanilla/tests/worlds/sync/detail/: WorldUpdater.cpp
distribs/vanilla/tests/worlds/syncWorld/: BlockReference.cpp  Blocks.cpp  ContactReference.cpp  Contacts.cpp  Links.cpp  StructureReference.cpp  Structures.cpp
distribs/vanilla/tests/worlds/syncWorld/detail/: WorldUpdater.cpp
packaging/cmake/: CMakeLists.txt  gustave-config.cmake
(+584 files in other folders)
